# autoblobs

./: config.json  main.py  pyproject.toml  readme.md
