[tool.poetry]
name = "autoblobs"
version = "0.1.0"
description = "Save \"shsh2\" blobs automatically and store them in Telegram Messenger"
authors = ["Ilya Breitburg <me@breitburg.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
